tests/diagnostics/comments/doc_comments/comment_line_breaks_attachment/expect.txt
# exit: 1
input/lib.coppice:1:1: error: doc comment must document a declaration
  /// This should not attach because of an intervening line comment.
  ^
